option optimize_for = LITE_RUNTIME;

option java_package = "com.sitewhere.device.provisioning.protobuf.proto";

// Encapsulates data sent to SiteWhere.
message SiteWhere {

	enum Command {REGISTER = 1; ACKNOWLEDGE = 2; DEVICELOCATION = 3; DEVICEALERT = 4; DEVICEMEASUREMENT = 5; } 
	
	// Header contains the command and originator.
	message Header {
		required Command command = 1;
		optional string originator = 2;
	}

	// Register a device with SiteWhere.
	message RegisterDevice {
		required string hardwareId = 1;
		required string specificationToken = 2;
	}

	// Acknowledge previous command.
	message Acknowledge {
		required string hardwareId = 1;
		optional string message = 2;
	}

	// Report device location.
	message DeviceLocation {
		required string hardwareId = 1;
		required double latitude = 2;
		required double longitude = 3;
		optional double elevation = 4;
		optional fixed64 eventDate = 5;
	}

	// Report device alert.
	message DeviceAlert {
		required string hardwareId = 1;
		required string alertType = 2;
		required string alertMessage = 3;
		optional fixed64 eventDate = 4;
	}
	
	// A single measurement.
	message Measurement {
		required string measurementId = 2;
		required double measurementValue = 3;
	}

	// Event message for device measurements.
	message DeviceMeasurements {
		required string hardwareId = 1;
		repeated Measurement measurement = 2;
		optional fixed64 eventDate = 3;
	}
}

// Encapsulates data received from SiteWhere.
message Device {

	enum Command {REGISTER_ACK = 1; } 
	
	// Header contains the command and originator.
	message Header {
		required Command command = 1;
		optional string originator = 2;
	}

	// Enumeration of registation state responses.
	enum RegistrationAckState {NEW_REGISTRATION = 1; ALREADY_REGISTERED = 2; REGISTRATION_ERROR = 3;} 
	enum RegistrationAckError {INVALID_SPECIFICATION = 1; SITE_TOKEN_REQUIRED = 2; } 

	// Acknowledges registration.
	message RegistrationAck {
		required RegistrationAckState state = 1;
		optional RegistrationAckError errorType = 2;
		optional string errorMessage = 3;
	}
}